Include fuzzy search to the ranking tool

--- a/preprocess/prepare_groceries.ipynb
+++ b/preprocess/prepare_groceries.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grocery_items = pd.read_csv('grocery_items.csv', sep=\",\", engine='python')\n",
+    "grocery_items = pd.read_csv('table_creation.csv', sep=\",\", engine='python')\n",
     "column_map = {'PRODUCT_NAME': 'title', 'PRODUCT_BRAND_NAME': 'brand', 'PRODUCT_ID': 'index',\n",
     "             'L4_CATEGORY': 'category', 'PRICE': 'price'}\n",
     "grocery_items.rename(columns=column_map, inplace=True)\n",
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered out 533 items\n"
+      "Filtered out 1012 items\n"
      ]
     },
     {
@@ -88,92 +88,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>17011460</td>\n",
-       "      <td>1.634000</td>\n",
-       "      <td>Pizza Sauce, New York Style</td>\n",
-       "      <td>DelGrosso</td>\n",
-       "      <td>Sauces</td>\n",
+       "      <td>29239089</td>\n",
+       "      <td>14.990000</td>\n",
+       "      <td>Mini Casserole Set - Purple</td>\n",
+       "      <td>Crofton</td>\n",
+       "      <td>Baking Dishes</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>30828654</td>\n",
-       "      <td>4.650000</td>\n",
-       "      <td>Assorted Chocolate Macarons</td>\n",
-       "      <td>Specially Selected</td>\n",
-       "      <td>Frozen Novelty Desserts</td>\n",
+       "      <td>3230772</td>\n",
+       "      <td>4.291482</td>\n",
+       "      <td>Xtra Cheddar Crackers</td>\n",
+       "      <td>Pepperidge Farm®  Goldfish® Flavor Blasted®</td>\n",
+       "      <td>Crackers and Dried Bread Snacks</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>19750626</td>\n",
-       "      <td>4.301111</td>\n",
-       "      <td>Gentle Baby Lotion</td>\n",
-       "      <td>Little Journey</td>\n",
-       "      <td>Baby Lotions</td>\n",
+       "      <td>18649218</td>\n",
+       "      <td>3.974822</td>\n",
+       "      <td>Calorie Free Stevia Sweetener</td>\n",
+       "      <td>Sweet Additions</td>\n",
+       "      <td>Sweeteners</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20193327</td>\n",
-       "      <td>4.493125</td>\n",
-       "      <td>Soft Spreadable Cheese, Garden Vegetable</td>\n",
-       "      <td>Alouette</td>\n",
-       "      <td>Cheese Dips and Spreads</td>\n",
+       "      <td>49898818</td>\n",
+       "      <td>3.990000</td>\n",
+       "      <td>USA Design 1 Sport Squeeze Bottle</td>\n",
+       "      <td>Crane</td>\n",
+       "      <td>Reusable Water Bottles</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20725052</td>\n",
-       "      <td>3.470000</td>\n",
-       "      <td>Sharp Cheddar Cheese Spread</td>\n",
-       "      <td>Emporium Selection</td>\n",
-       "      <td>Cheese Dips and Spreads</td>\n",
+       "      <td>20060905</td>\n",
+       "      <td>3.186295</td>\n",
+       "      <td>Everything Skinnys Bagel</td>\n",
+       "      <td>L'oven Fresh</td>\n",
+       "      <td>Bagels</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>28033040</td>\n",
-       "      <td>4.680526</td>\n",
-       "      <td>Non-GMO Grapeseed Oil</td>\n",
-       "      <td>Simply Nature</td>\n",
-       "      <td>Cooking Oils</td>\n",
+       "      <td>20269279</td>\n",
+       "      <td>2.449034</td>\n",
+       "      <td>Graham Crackers</td>\n",
+       "      <td>Benton's</td>\n",
+       "      <td>Crackers and Dried Bread Snacks</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>20537082</td>\n",
-       "      <td>2.334308</td>\n",
-       "      <td>Peanut Butter Filled Cookies</td>\n",
-       "      <td>Benton's</td>\n",
-       "      <td>Packaged Baked Goods</td>\n",
+       "      <td>20873280</td>\n",
+       "      <td>1.424644</td>\n",
+       "      <td>Hamburger Buns</td>\n",
+       "      <td>L'oven Fresh</td>\n",
+       "      <td>Hamburger Buns</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>28127404</td>\n",
-       "      <td>5.290000</td>\n",
-       "      <td>Italian Sausage With Roasted Potatoes, Peppers...</td>\n",
-       "      <td>Bremer</td>\n",
-       "      <td>Italian Sausage</td>\n",
+       "      <td>24195606</td>\n",
+       "      <td>9.990000</td>\n",
+       "      <td>Size 6 8 Pack Children's Mine Craft Licensed U...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Boys Underwear</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>25901190</td>\n",
-       "      <td>0.673786</td>\n",
-       "      <td>Organic Bananas</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Bananas</td>\n",
+       "      <td>20478028</td>\n",
+       "      <td>1.657164</td>\n",
+       "      <td>Reduced Sodium Soy Sauce</td>\n",
+       "      <td>Fusia</td>\n",
+       "      <td>Sauces</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>20363182</td>\n",
-       "      <td>3.490000</td>\n",
-       "      <td>Mango Passion 100% Juice</td>\n",
-       "      <td>Nature's Nectar</td>\n",
-       "      <td>Fruit Juice Blends</td>\n",
+       "      <td>20863220</td>\n",
+       "      <td>2.423477</td>\n",
+       "      <td>Sugar Cookie Mix</td>\n",
+       "      <td>Baker's Corner</td>\n",
+       "      <td>Baking Mixes</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -181,32 +181,44 @@
        "</div>"
       ],
       "text/plain": [
-       "      index     price                                              title  \\\n",
-       "0  17011460  1.634000                        Pizza Sauce, New York Style   \n",
-       "1  30828654  4.650000                        Assorted Chocolate Macarons   \n",
-       "2  19750626  4.301111                                 Gentle Baby Lotion   \n",
-       "3  20193327  4.493125           Soft Spreadable Cheese, Garden Vegetable   \n",
-       "4  20725052  3.470000                        Sharp Cheddar Cheese Spread   \n",
-       "5  28033040  4.680526                              Non-GMO Grapeseed Oil   \n",
-       "6  20537082  2.334308                       Peanut Butter Filled Cookies   \n",
-       "7  28127404  5.290000  Italian Sausage With Roasted Potatoes, Peppers...   \n",
-       "8  25901190  0.673786                                    Organic Bananas   \n",
-       "9  20363182  3.490000                           Mango Passion 100% Juice   \n",
+       "      index      price                                              title  \\\n",
+       "0  29239089  14.990000                        Mini Casserole Set - Purple   \n",
+       "1   3230772   4.291482                              Xtra Cheddar Crackers   \n",
+       "2  18649218   3.974822                      Calorie Free Stevia Sweetener   \n",
+       "3  49898818   3.990000                  USA Design 1 Sport Squeeze Bottle   \n",
+       "4  20060905   3.186295                           Everything Skinnys Bagel   \n",
+       "5  20269279   2.449034                                    Graham Crackers   \n",
+       "6  20873280   1.424644                                     Hamburger Buns   \n",
+       "7  24195606   9.990000  Size 6 8 Pack Children's Mine Craft Licensed U...   \n",
+       "8  20478028   1.657164                           Reduced Sodium Soy Sauce   \n",
+       "9  20863220   2.423477                                   Sugar Cookie Mix   \n",
        "\n",
-       "                brand                 category  id  \n",
-       "0           DelGrosso                   Sauces   1  \n",
-       "1  Specially Selected  Frozen Novelty Desserts   2  \n",
-       "2      Little Journey             Baby Lotions   3  \n",
-       "3            Alouette  Cheese Dips and Spreads   4  \n",
-       "4  Emporium Selection  Cheese Dips and Spreads   5  \n",
-       "5       Simply Nature             Cooking Oils   6  \n",
-       "6            Benton's     Packaged Baked Goods   7  \n",
-       "7              Bremer          Italian Sausage   8  \n",
-       "8                 NaN                  Bananas   9  \n",
-       "9     Nature's Nectar       Fruit Juice Blends  10  "
+       "                                         brand  \\\n",
+       "0                                      Crofton   \n",
+       "1  Pepperidge Farm®  Goldfish® Flavor Blasted®   \n",
+       "2                              Sweet Additions   \n",
+       "3                                        Crane   \n",
+       "4                                 L'oven Fresh   \n",
+       "5                                     Benton's   \n",
+       "6                                 L'oven Fresh   \n",
+       "7                                          NaN   \n",
+       "8                                        Fusia   \n",
+       "9                               Baker's Corner   \n",
+       "\n",
+       "                          category  id  \n",
+       "0                    Baking Dishes   1  \n",
+       "1  Crackers and Dried Bread Snacks   2  \n",
+       "2                       Sweeteners   3  \n",
+       "3           Reusable Water Bottles   4  \n",
+       "4                           Bagels   5  \n",
+       "5  Crackers and Dried Bread Snacks   6  \n",
+       "6                   Hamburger Buns   7  \n",
+       "7                   Boys Underwear   8  \n",
+       "8                           Sauces   9  \n",
+       "9                     Baking Mixes  10  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
